# CV_Assignments

./: .gitignore  CMakeLists.txt  Calibration.cpp  ba_extrinsics.cpp  bundle_adjustment.cpp  calibration.cpp  camera_pose.cpp  camera_pose_ransac.cpp  camera_to_camera.cpp  distortion.cpp  pose.cpp
data/: camera_0.json  camera_1.json  camera_2.json  camera_3.json  camera_4.json  correspondences_checkerboard.json  correspondences_extrinsics.json  left_camera_correspondences.json  right_camera_correspondences.json
include/: Calibration.hpp  types.hpp  utilities.hpp
